Fix alignment error when there is readout text

--- a/sass/base/_call-to-action.scss
+++ b/sass/base/_call-to-action.scss
@@ -62,17 +62,22 @@
 
 			
 
-			#{$and}__header{
-				margin-right: $grid-gap / 2;
-			}
+			// #{$and}__header{
+			// 	margin-right: $grid-gap / 2;
+			// }
 
 			#{$and}__button{
-				margin: 0;
+				margin: 0 0 0 #{$grid-gap / 2};
 				max-width:150px;
 			}
 
 			.cta__header + .cta__text {
 				width: 100%;
+			}
+
+			.cta__text + .cta__button{
+				// If the button is next to the readout, then center everything again.
+				margin: #{$grid-gap / 2} auto 0 auto;
 			}
 		}
 	}
